<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LightCycle</string>
    <string name="label_options">Settings</string>
    <string name="label_save">Save</string>
    <string name="label_test_stitch">Stitch Panorama</string>
    <string name="message_stitching">Please Wait</string>
    <string name="options_dialog_title">Settings</string>
    <string name="stitching_finished">Panorama stitching is complete.</string>
    <string name="stitching_notification">Stitching panorama.</string>
    <string name="currently_stitching">A panorama is already being stitched.</string>
    <string name="start_stitching">Stitching is in progress. You will be notified when it is complete.</string>
    <string name="stitch_background_option">Background stitching</string>
    <string name="panorama_options_text">Panorama options</string>
    <string name="cancel_button_text">"  Cancel  "</string>
    <string name="stitch_button_text">"  Stitch  "</string>
    <string name="stitching_note">" Note : stitching in the background may be slower but will free your device for other tasks. "</string>
    <string name="unable_to_load_photo">Sorry, this photo could not be loaded.</string>
    <string name="photo_is_not_a_pano">Sorry, this photo is not a usable panorama.</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="show_on_startup">Show this on start-up</string>
    <string name="confidential">CONFIDENTIAL</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="gallery">Gallery</string>
    <string name="downloading_panorama">Downloading panorama …</string>
    <string name="expanding_short_url">Expanding shortened URL …</string>
    <string name="cannot_display_pano">Cannot display panorama</string>
    <string name="cannot_create_image">Cannot create image</string>
    <string name="image_doesnt_contain_metadata">The image file does not contain the required panorama metadata.</string>
    <string name="image_file_could_not_be_read">Image file could not be read.</string>
    <string name="too_fast">Too fast</string>
    <string name="hit_target_to_start">Align to start</string>
    <string name="new_panorama">New Panorama</string>
    <string name="settings">Settings</string>
    <string name="help_n_tips">Help and Tips</string>
    <string name="help_ampersand_tips">Help &amp; Tips</string>
    <string name="my_panoramas">My Panoramas</string>
    <string name="feedback">Feedback</string>
    <string name="title_panoramas">Panoramas</string>
    <string name="title_unfinished">Unfinished</string>
    <string name="fetching_data_from_picasa">Fetching data from Picasa</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="success">Success</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="select_google_account">Select a Google account</string>
    <string name="cannot_get_authtoken">Unable to get authentication token</string>
    <string name="share_pano_with">Share your panorama with</string>
    <string name="panorama_actions">Panorama actions</string>
    <string name="progress_authenticating">Authenticating</string>
    <string name="progress_creating_album">Creating album</string>
    <string name="progress_finding_album">Finding album</string>
    <string name="progress_uploading_pano">Uploading panorama</string>
    <string name="progress_fetching_pano_url">Fetching panorama URL</string>
    <string name="progress_shortening_pano_url">Shortening panorama URL</string>
    <string name="no_suitable_account_found">No suitable account found.</string>
    <string name="swipe_or_tap_for_next_tip">Swipe or tap for next tip</string>
    <string name="importing_existing_panos">Importing existing panoramas</string>
    <string name="deleting_pano">Deleting panorama</string>
    <string name="are_you_sure_you_want_to_delete_pano">Are you sure you want to delete this panorama?</string>
    <string name="collecting_session_data">Collecting session data</string>
    <string name="could_not_stitch_pano">Could not stitch panorama</string>
    <string name="no_source_directory">"Source directory doesn't exist."</string>
    <string name="stitch_unstitched_sessions">Stitch all unstitched sessions</string>
    <string name="you_have_x_unstitched_panos">"You have %d unstitched panoramas.

If you press OK, we will try to stitch them."</string>
    <string name="little_planet_stitching_complete">Stitching completed. Check your gallery.</string>
    <string name="donating_to_maps">Sending panorama to Maps …</string>
    <string name="cannot_send_to_maps">Cannot send to Maps due to missing GPS information.</string>
    <string name="successfully_sent_to_maps">Successfully sent to Maps. You will receive an e-mail.</string>
    <string name="cannot_share_to_maps_360">This panorama is cropped and cannot be shared to Maps.</string>
    <string name="general_settings">General settings</string>
    <string name="dogfood_settings">Dogfood settings</string>
    <string name="use_fast_shutter">Use fast shutter</string>
    <string name="use_fast_shutter_description">Use high speed shutter mode.</string>
    <string name="use_realtime_alignment">Use Realtime Alignment</string>
    <string name="use_realtime_alignment_description">Align the images while capturing them (Highly experimental).</string>
    <string name="display_live_camera_image">Display live camera image</string>
    <string name="display_live_camera_image_description">Show the live camera image.</string>
    <string name="use_gyro">Use Gyro</string>
    <string name="use_gyro_description">Use the gyro instead of vision to align the preview</string>
    <string name="alt_menu">Alternative Menu</string>
    <string name="alt_menu_description">A different main menu style. (Requires app restart to take effect)</string>
    <string name="allow_fast_motion">Allow faster motion</string>
    <string name="allow_fast_motion_description">Allow faster motion when hitting targets.</string>
    <string name="enable_location_provider">Store location</string>
    <string name="enable_location_provider_description">Whether to determine and store the location in the panorama files.</string>
    <string name="experimental_settings">Experimental settings</string>
    <string name="enable_hdr_mode">Enable HDR Mode</string>
    <string name="enable_hdr_mode_description">If supported by the device, uses HDR mode to take pictures. You need to stay over the target for a while until the HDR picture is fully taken. Will crash on non-HDR capable devices.</string>
    <string name="panorama_viewer_title">Panorama Viewer</string>
    <string name="panorama_expanding_short_url">Expanding shortened URL …</string>
    <string name="panorama_unable_to_load_photo">Sorry, this photo could not be loaded.</string>
    <string name="panorama_photo_is_not_a_pano">Sorry, this photo is not a usable panorama.</string>
    <string name="panorama_downloading_panorama">Downloading panorama …</string>
    <string name="panorama_cannot_display_pano">Cannot display panorama</string>
    <string name="panorama_image_doesnt_contain_metadata">The image file does not contain the required panorama metadata.</string>
    <string name="panorama_image_file_could_not_be_read">Image file could not be read.</string>
    <string name="panorama_cancel_button_text">"  Cancel  "</string>
    <string name="photo_sphere_calibration">Photo Sphere Calibration</string>
    <string name="tap_to_take_photo">Tap to calibrate</string>
    <string name="marker_distance">Marker distance (in cm)</string>
    <string name="marker_distance_description">The distance in centimeters between the solid lines on the target pattern.</string>
    <string name="target_distance">Target distance (in cm)</string>
    <string name="target_distance_description">The distance in centimeters from the device to the target pattern.</string>
    <string name="settings_button_text">Setup</string>
    <string name="displayed_fov_label">Displayed FOV :</string>
    <string name="reported_fov_label">Reported FOV :</string>
    <string name="panorama_wallpaper_title">Photo Sphere Live Wallpaper</string>
    <string name="panorama_wallpaper_description">This live wallapper displays photo spheres.</string>
    <string name="select_panorama">Select panorama</string>
    <string name="select_panorama_description">Select a panorama to display in the live wallpaper.</string>
    <string name="reset_panorama">Reset panorama</string>
    <string name="reset_panorama_description">Resets the panorama to show the demo file.</string>
    <string name="enable_compass_mode">Enable compass mode</string>
    <string name="enable_compass_mode_description">If enabled, the panorama orients itself according to the current rotation of the device.</string>
</resources>
